Fixed Shortcut Spacing

--- a/nginx/public/main.css
+++ b/nginx/public/main.css
@@ -192,7 +192,7 @@ body {
 .button-parent .keyboard-key {
     display: inline-block;
     padding: 2px 5px;
-    margin-right: 4px;
+    margin: 0 4px;
     color: #353535;
     background-color: #FFFFFF;
 }
